deploy(compose): 优化compose启动参数

--- a/deploy/docker/docker-compose.yaml
+++ b/deploy/docker/docker-compose.yaml
@@ -158,8 +158,17 @@ services:
       - "--discover"
       - "--register"
       - "--remote-config"
+      - "--hot-reload"
       - "--config-center-addr"
       - "consul:8500"
+      - "--pprof-bind-address"
+      - ":6060"
+      - "--metrics-bind-address"
+      - ":9090"
+      - "--http-health-probe-bind-address"
+      - ":9091"
+      - "--grpc-health-probe-bind-address"
+      - ":9092"
     volumes:
       - ./config/pgp:/.cache
     depends_on:
@@ -180,8 +189,17 @@ services:
       - "--discover"
       - "--register"
       - "--remote-config"
+      - "--hot-reload"
       - "--config-center-addr"
       - "consul:8500"
+      - "--pprof-bind-address"
+      - ":6060"
+      - "--metrics-bind-address"
+      - ":9090"
+      - "--http-health-probe-bind-address"
+      - ":9091"
+      - "--grpc-health-probe-bind-address"
+      - ":9092"
     volumes:
       - ./config/pgp:/.cache
     depends_on:
@@ -199,8 +217,17 @@ services:
       - "--discover"
       - "--register"
       - "--remote-config"
+      - "--hot-reload"
       - "--config-center-addr"
       - "consul:8500"
+      - "--pprof-bind-address"
+      - ":6060"
+      - "--metrics-bind-address"
+      - ":9090"
+      - "--http-health-probe-bind-address"
+      - ":9091"
+      - "--grpc-health-probe-bind-address"
+      - ":9092"
     depends_on:
       mysql:
         condition: service_healthy
@@ -216,8 +243,17 @@ services:
       - "--discover"
       - "--register"
       - "--remote-config"
+      - "--hot-reload"
       - "--config-center-addr"
       - "consul:8500"
+      - "--pprof-bind-address"
+      - ":6060"
+      - "--metrics-bind-address"
+      - ":9090"
+      - "--http-health-probe-bind-address"
+      - ":9091"
+      - "--grpc-health-probe-bind-address"
+      - ":9092"
     volumes:
       - ./config/pgp:/.cache
     depends_on:
@@ -233,8 +269,17 @@ services:
       - "--discover"
       - "--register"
       - "--remote-config"
+      - "--hot-reload"
       - "--config-center-addr"
       - "consul:8500"
+      - "--pprof-bind-address"
+      - ":6060"
+      - "--metrics-bind-address"
+      - ":9090"
+      - "--http-health-probe-bind-address"
+      - ":9091"
+      - "--grpc-health-probe-bind-address"
+      - ":9092"
     volumes:
       - ./config/pgp:/.cache
     depends_on:
@@ -250,8 +295,17 @@ services:
       - "--discover"
       - "--register"
       - "--remote-config"
+      - "--hot-reload"
       - "--config-center-addr"
       - "consul:8500"
+      - "--pprof-bind-address"
+      - ":6060"
+      - "--metrics-bind-address"
+      - ":9090"
+      - "--http-health-probe-bind-address"
+      - ":9091"
+      - "--grpc-health-probe-bind-address"
+      - ":9092"
     depends_on:
       mysql:
         condition: service_healthy
@@ -267,8 +321,17 @@ services:
       - "--discover"
       - "--register"
       - "--remote-config"
+      - "--hot-reload"
       - "--config-center-addr"
       - "consul:8500"
+      - "--pprof-bind-address"
+      - ":6060"
+      - "--metrics-bind-address"
+      - ":9090"
+      - "--http-health-probe-bind-address"
+      - ":9091"
+      - "--grpc-health-probe-bind-address"
+      - ":9092"
     volumes:
       - ./config/pgp:/.cache
     depends_on:
@@ -284,8 +347,17 @@ services:
       - "--discover"
       - "--register"
       - "--remote-config"
+      - "--hot-reload"
       - "--config-center-addr"
       - "consul:8500"
+      - "--pprof-bind-address"
+      - ":6060"
+      - "--metrics-bind-address"
+      - ":9090"
+      - "--http-health-probe-bind-address"
+      - ":9091"
+      - "--grpc-health-probe-bind-address"
+      - ":9092"
     volumes:
       - ./config/pgp:/.cache
     environment:
