--- a/internal/group/api/openapi/group.yaml
+++ b/internal/group/api/openapi/group.yaml
@@ -12,6 +12,47 @@ tags:
       description: Find out more
       url: http://swagger.io
 paths:
+  /api/v1/group/search:
+    get:
+      tags:
+        - group
+      summary: 搜索群聊
+      description: 根据关键字搜索群聊
+      operationId: searchGroup
+      parameters:
+        - name: keyword
+          in: query
+          required: true
+          description: 搜索关键字 群聊名称或id
+          schema:
+            type: string
+        - name: page
+          in: query
+          required: false
+          description: 页码
+          schema:
+            type: integer
+            format: int32
+#            x-omitempty: false
+#            x-go-type-skip-optional-pointer: true
+        - name: page_size
+          in: query
+          required: false
+          description: 每页大小
+          schema:
+            type: integer
+            format: int32
+#            x-omitempty: false
+#            x-go-type-skip-optional-pointer: true
+      responses:
+        '200':
+          description: 返回搜索结果
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Group'
   /api/v1/group:
     post:
       tags:
@@ -69,7 +110,9 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/GroupInfo'
+                type: array
+                items:
+                  $ref: '#/components/schemas/GroupInfo'
     put:
       tags:
         - group
@@ -139,17 +182,27 @@ components:
           type: integer
           format: uint32
           description: 群聊ID
+          x-omitempty: false
+          x-go-type-skip-optional-pointer: true
         name:
           type: string
           description: 群聊名称
+          x-omitempty: false
+          x-go-type-skip-optional-pointer: true
         avatar:
           type: string
           description: 群组头像
-        members:
-          type: array
-          items:
-            type: string
-          description: 群组成员列表
+          x-go-type-skip-optional-pointer: true
+        member:
+          type: integer
+          description: 群聊成员数量
+          x-omitempty: false
+          x-go-type-skip-optional-pointer: true
+        max_members_limit:
+          type: integer
+          description: 群组成员上限
+          x-omitempty: false
+          x-go-type-skip-optional-pointer: true
     CreateGroupRequest:
       type: object
       properties:
@@ -249,7 +302,7 @@ components:
           x-go-type-skip-optional-pointer: true
         type:
           type: integer
-          format: uint32
+          format: uint8
           description: 群组类型
           x-go-type-skip-optional-pointer: true
         status:
