--- a/internal/admin/config/config.yaml
+++ b/internal/admin/config/config.yaml
@@ -5,11 +5,10 @@ admin:
   user_id : "10000"
 
 system:
-  environment: "dev" # dev、prod
-  gateway_address: "43.229.28.107"
+  ssl: false # 是否启用ssl true的话不会使用port
+  gateway_address: "127.0.0.1"
   gateway_port: 8080
-  gateway_address_dev: "127.0.0.1"
-  gateway_port_dev: 8080
+  jwt_secret: "secret"
 
 email:
   enable: false
@@ -83,17 +82,17 @@ discovers:
   user:
     name: "user_service"
     address: "user_service"
-    port: 10004
+    port: 10002
     direct: true
   relation:
     name: "relation_service"
     address: "relation_service"
-    port: 10002
+    port: 10001
     direct: true
   msg:
     name: "msg_service"
     address: "msg_service"
-    port: 10001
+    port: 10000
     direct: true
   push:
     name: "push_service"
