--- a/internal/msg/Makefile
+++ b/internal/msg/Makefile
@@ -57,8 +57,8 @@ gen: ## generate protobuf file
 
 .PHONY: gen-openapi
 gen-openapi:
-	@oapi-codegen -generate spec,gin -o api/http/v1/openapi.gen.go -package v1 api/openapi/msg.yaml
-	@oapi-codegen -generate types -o api/http/v1/openapi.types.go -package v1 api/openapi/msg.yaml
+	@oapi-codegen -generate spec,gin -o api/http/v1/openapi.gen.go -package v1 api/http/v1/msg.yaml
+	@oapi-codegen -generate types -o api/http/v1/openapi.types.go -package v1 api/http/v1/msg.yaml
 
 run: # Run Develop server
 	@go run ../../cmd/$(PROJECT_NAME)/main.go --config ./config/config.yaml
