--- a/internal/user/Makefile
+++ b/internal/user/Makefile
@@ -57,8 +57,8 @@ gen: ## generate protobuf file
 
 .PHONY: gen-openapi
 gen-openapi:
-	@oapi-codegen -generate gin,spec -o api/http/v1/openapi.gen.go -package v1 api/openapi/*.yaml
-	@oapi-codegen -generate types -o api/http/v1/openapi.types.go -package v1 api/openapi/*.yaml
+	@oapi-codegen -generate gin,spec -o api/http/v1/openapi.gen.go -package v1 api/http/v1/*.yaml
+	@oapi-codegen -generate types -o api/http/v1/openapi.types.go -package v1 api/http/v1/*.yaml
 
 run: # Run Develop server
 	@go run ../../cmd/$(PROJECT_NAME)/main.go --config ./config/config.yaml
