--- a/internal/user/Makefile
+++ b/internal/user/Makefile
@@ -8,16 +8,10 @@ GO_FILES := $(shell find . -name '*.go' | grep -v /vendor/ | grep -v _test.go)
 .PHONY: all dep lint vet test test-coverage build clean
 
 BUILD_BRANCH := $(shell git rev-parse --abbrev-ref HEAD)
-#BUILD_BRANCH := "main"
 BUILD_COMMIT := ${shell git rev-parse HEAD}
-#BUILD_COMMIT := "22193944514397212fe6a25189906ab9de49164a"
 BUILD_TIME := ${shell date '+%Y-%m-%d %H:%M:%S'}
 BUILD_GO_VERSION := $(shell go version | grep -o  'go[0-9].[0-9].*')
 VERSION_PATH := "github.com/cossim/coss-server/pkg/version"
-
-
-# Image URL to use all building/pushing image targets
-IMG ?= hub.hitosea.com/coss-server:latest
 
 all: build
 
@@ -45,55 +39,22 @@ build: dep ## Build the binary file
 build-linux: dep ## Build the binary file
 	@GOOS=linux GOARCH=amd64 go build -ldflags "-s -w" -ldflags "-X '${VERSION_PATH}.GIT_BRANCH=${BUILD_BRANCH}' -X '${VERSION_PATH}.GIT_COMMIT=${BUILD_COMMIT}' -X '${VERSION_PATH}.BUILD_TIME=${BUILD_TIME}' -X '${VERSION_PATH}.GO_VERSION=${BUILD_GO_VERSION}'" -o bin/main $(MAIN_FILE)
 
-install: ## Install depence go package
-	@go install google.golang.org/protobuf/cmd/protoc-gen-go@latest
-	@go install google.golang.org/grpc/cmd/protoc-gen-go-grpc@latest
-	@go install github.com/favadi/protoc-go-inject-tag@latest
+gen: gen-grpc gen-openapi
 
-gen: ## generate protobuf file
-	@protoc -I=. --go_out=. --go_opt=paths=source_relative --go-grpc_out=. --go-grpc_opt=paths=source_relative,require_unimplemented_servers=false api/grpc/v1/*.proto
-	@go fmt ./...
-	@protoc-go-inject-tag -input=api/grpc/v1/*.pb.go
+.PHONY: gen-grpc
+gen-grpc:
+	-@protoc -I=. --go_out=. --go_opt=paths=source_relative --go-grpc_out=. --go-grpc_opt=paths=source_relative,require_unimplemented_servers=false api/grpc/v1/*.proto
+	-@go fmt ./...
+	-@protoc-go-inject-tag -input=api/grpc/v1/*.pb.go
 
 .PHONY: gen-openapi
 gen-openapi:
-	@oapi-codegen -generate gin,spec -o api/http/v1/openapi.gen.go -package v1 api/http/v1/*.yaml
-	@oapi-codegen -generate types -o api/http/v1/openapi.types.go -package v1 api/http/v1/*.yaml
+	-@oapi-codegen -generate gin,spec -o api/http/v1/openapi.gen.go -package v1 api/http/v1/*.yaml
+	-@oapi-codegen -generate types -o api/http/v1/openapi.types.go -package v1 api/http/v1/*.yaml
 
 run: # Run Develop server
 	@go run ../../cmd/$(PROJECT_NAME)/main.go --config ./config/config.yaml
 
+.PHONY: help
 help: ## Display this help screen
 	@grep -h -E '^[a-zA-Z_-]+:.*?## .*$$' $(MAKEFILE_LIST) | awk 'BEGIN {FS = ":.*?## "}; {printf "\033[36m%-30s\033[0m %s\n", $$1, $$2}'
-
-
-
-# If you wish built the manager image targeting other platforms you can use the --platform flag.
-# (i.e. docker build --platform linux/arm64 ). However, you must enable docker buildKit for it.
-# More info: https://docs.docker.com/develop/develop-images/build_enhancements/
-.PHONY: docker-build
-docker-build: test ## Build docker image with the manager.
-	# make docker-build ACTION=service NAME=user
-	docker build -t ${IMG} .
-
-.PHONY: docker-push
-docker-push: ## Push docker image with the manager.
-	# make docker-push ACTION=service NAME=user
-	docker push ${IMG}
-
-# PLATFORMS defines the target platforms for  the manager image be build to provide support to multiple
-# architectures. (i.e. make docker-buildx IMG=myregistry/mypoperator:0.0.1). To use this option you need to:
-# - able to use docker buildx . More info: https://docs.docker.com/build/buildx/
-# - have enable BuildKit, More info: https://docs.docker.com/develop/develop-images/build_enhancements/
-# - be able to push the image for your registry (i.e. if you do not inform a valid value via IMG=<myregistry/image:<tag>> then the export will fail)
-# To properly provided solutions that supports more than one platform you should use this option.
-PLATFORMS ?= linux/arm64,linux/amd64,linux/s390x,linux/ppc64le
-.PHONY: docker-buildx
-docker-buildx: test ## Build and push docker image for the manager for cross-platform support
-	# copy existing Dockerfile and insert --platform=${BUILDPLATFORM} into Dockerfile.cross, and preserve the original Dockerfile
-	sed -e '1 s/\(^FROM\)/FROM --platform=\$$\{BUILDPLATFORM\}/; t' -e ' 1,// s//FROM --platform=\$$\{BUILDPLATFORM\}/' Dockerfile > Dockerfile.cross
-	- docker buildx create --name project-v3-builder
-	docker buildx use project-v3-builder
-	- docker buildx build --push --platform=$(PLATFORMS) --tag ${IMG} -f Dockerfile.cross .
-	- docker buildx rm project-v3-builder
-	rm Dockerfile.cross
