--- a/.github/workflows/docker_relation_service.yml
+++ b/.github/workflows/docker_relation_service.yml
@@ -6,6 +6,8 @@ on:
        - 'releases/**'
        - 'main'
        - 'master'
+    tags:
+      - '**'
     paths:
       - 'pkg/**/*.go'
       - 'docs/relation*.*'
@@ -38,11 +40,16 @@ jobs:
       shell: bash
       run: |
           set -o xtrace
+          if [[ "${GITHUB_REF}" == refs/tags/* ]]; then
+            tag="${GITHUB_REF#refs/tags/}"
+          else
+            tag="${IMAGE_TAG:-latest}"
+          fi
           branch="${GITHUB_REF#refs/heads/}"
           timestamp=`TZ="Asia/Shanghai" date +"%Y%m%d%H%M%S"`
           export VERSION="$branch-$timestamp-solo"
           export GO111MODULE=on
           export GOOS=linux
           export ARCH=all
-          export REGISTRY=${{ secrets.REGISTRY }}/cossim
-          make docker-build docker-push relation TAG=latest REGISTRY=${{ secrets.REGISTRY }}/cossim
+          export REGISTRY=${{ secrets.REGISTRY }}
+          make docker-build docker-push relation TAG=$tag REGISTRY=${{ secrets.REGISTRY }}
